--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
     <artifactId>snakeyaml</artifactId>
     <version>1.21</version>            
 	</dependency>
+	<dependency>
+        <groupId>org.apache.pdfbox</groupId>
+        <artifactId>pdfbox</artifactId>
+        <version>2.0.7</version>
+	</dependency>
   </dependencies>
   
   
