--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <config>C:\\Users\\Pierpaolo\\Desktop\\Telegram-ERSU-Bot\\src\\config\\settings.yaml</config>
   </properties>
 
   <dependencies>
@@ -46,6 +47,11 @@
       <artifactId>telegrambotsextensions</artifactId>
       <version>4.0.1</version>
       <type>jar</type>
+    </dependency>
+    <dependency>
+		<groupId>log4j</groupId>
+		<artifactId>log4j</artifactId>
+		<version>1.2.17</version>
     </dependency>
   </dependencies>
   
