--- a/src/main/resources/config/settings.yaml.dist
+++ b/src/main/resources/config/settings.yaml.dist
@@ -8,7 +8,7 @@ news_channel: '@channelnews'
 
 url_ersu: 'http://www.ersucatania.gov.it/blog/'
 
-path_avvisi: "classes/avvisi.txt"
-path_mensa: "classes/menu.pdf"
-log4j_properties: "classes/log4j.properties"
+path_avvisi: "resources/data/avvisi.txt"
+path_mensa: "resources/data/menu.pdf"
+log4j_properties: "resources/config/log4j.properties"
 
