--- a/resources/config/settings.yml.dist
+++ b/resources/config/settings.yml.dist
@@ -11,4 +11,5 @@ url_ersu: 'http://www.ersucatania.gov.it/blog/'
 path_avvisi: "../resources/data/avvisi.txt"
 path_mensa: "../resources/data/menu.pdf"
 log4j_properties: "../resources/config/log4j.properties"
+blacklist: "../resources/data/avvisi.txt"
 
