--- a/resources/config/settings.yml.dist
+++ b/resources/config/settings.yml.dist
@@ -10,6 +10,7 @@ url_ersu: 'http://www.ersucatania.gov.it/blog/'
 
 path_avvisi: "../resources/data/avvisi.txt"
 path_mensa: "../resources/data/menu.pdf"
+path_id: "../resources/data/id.dat"
 log4j_properties: "../resources/config/log4j.properties"
-blacklist: "../resources/data/avvisi.txt"
+blacklist: "../resources/data/blacklist.dat"
 
