callback system refactoring, new report command scaffolding

--- a/resources/config/log4j.properties
+++ b/resources/config/log4j.properties
@@ -1,5 +1,5 @@
 #LOGGER ERROR
-log4j.rootLogger=ERROR, APPENDER_FILE, APPENDER_OUT
+# log4j.rootLogger=ERROR, APPENDER_FILE, APPENDER_OUT
 #LOGGER INFO
 log4j.rootLogger=INFO, APPENDER_FILE, APPENDER_OUT
 
